--- a/strona_lista.html
+++ b/strona_lista.html
@@ -18,7 +18,9 @@
 		<hr />
 		<p><b><i>Telefon kontaktowy:</b></i> 608 458 789</p>
 		<p><b><i> e-mail:</b></i> firmex1999@gmail.com</p>
+		<p><a href="mailto:firmex1999@gmail.com">Wyœlij do nas wiadomoœæ</a>
 		<p> <acronym title ="Numer Identyfikacji Podatkowej"> NIP </acronym>   683 1121 36 29 </p>	
+		<img src="D:/html/GIT/9766.jpeg" alt=""/>
 
 	</body>
 </html>
