--- a/Nowy projekt/listopad_firmex.html
+++ b/Nowy projekt/listopad_firmex.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		
+		<link rel="shortcut icon" href="D:html/GIT/images/logoFirmex — kopia.ico" type="image/x-icon">
 		<title> FIRMEX firma remontowo-budowlana </title>
 	</head> 
 
@@ -11,17 +13,23 @@
 	
 	
 		
-		<div id="header"> <a href= "D:/html/Nowy projekt/listopad_firmex_2strona.html"> <p> Firmex </p> </a>
+		<!--<div id="header"> <a href= "D:/html/Nowy projekt/listopad_firmex_2strona.html"> <p> Firmex </p> </a>
 		
-	</div>
+	</div> -->
+<div id=top_panel1>
+		<a href= "D:/html/Nowy projekt/listopad_firmex_2strona.html"> <p>Firma remontowa FIRMEX </p> </a>
 
+	</div>
 	<img src="D:/html/GIT/images/social-networking-icon-2898676_1280.png" class="phone"/>
 	<div id="contact">
 		+48 608 458 789 
 	</div>
 <img src="D:/html/GIT/images/icon-e-mail-2898669_1280.png" class="email"/>
 	<div id="contact2">
-		<a href="mailto:firmex1999@gmail.com">firmex1999@gmail.com</a> 
+		<a href="m&#x61;&#x69;&#108;&#116;&#111;&#x3A;
+f&#x69;rm&#101;x1999&#64;gm&#x61;&#x69;&#108;&#x2E;&#99;&#x6F;m">
+f&#x69;rm&#101;x1999&#64;gm&#x61;&#x69;&#108;&#x2E;&#99;&#x6F;m
+</a>
 	</div>
 
 
