--- a/Nowy projekt/listopad_firmex_2strona.html
+++ b/Nowy projekt/listopad_firmex_2strona.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="D:html/GIT/images/logoFirmex — kopia.ico" type="image/x-icon">
 		<title> FIRMEX firma remontowo-budowlana </title>
 	</head>  
 <body>
 	<link href="D:/html/Nowy projekt/header_style.css" type="text/css" rel="stylesheet" />
 	 
-<div class="back"> </div>
+
 	<div id=top_panel>
 		Firma remontowa FIRMEX
 
@@ -56,7 +57,10 @@
 	</div>
 <img src="D:/html/GIT/images/icon-e-mail-2898669_1280.png" class="email2"/>
 	<div id="contact4">
-		<a href="mailto:firmex1999@gmail.com">firmex1999@gmail.com</a> 
+		<a href="m&#x61;&#x69;&#108;&#116;&#111;&#x3A;
+f&#x69;rm&#101;x1999&#64;gm&#x61;&#x69;&#108;&#x2E;&#99;&#x6F;m">
+f&#x69;rm&#101;x1999&#64;gm&#x61;&#x69;&#108;&#x2E;&#99;&#x6F;m
+</a>
 	</div> 
 	</body>
 </html>
